--- a/style.css
+++ b/style.css
@@ -157,8 +157,8 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  bottom: 25rem;
+  position: absolute;
+  bottom: 4rem;
   background-color: #e4fbed;
   z-index: 300;
   /* padding: 4rem 2rem; */
